--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anta&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   font-family: "Poppins";
 }
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .mainContainer {
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url("/public/assets/Background.jpg");
   background-size: cover;
   background-position: center;
   position: fixed;
   overflow-y: scroll;
+  padding-top: 50px;
 }
+
 .mainContainer::before {
   content: "";
   position: fixed;
@@ -58,20 +24,23 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #00000049;
+  background-color: #0000007a;
   z-index: -1;
 }
+
 .audioIcon {
   position: absolute;
-  right: 10px;
-  top: 10px;
-  padding: 10px;
+  right: 1vw;
+  top: 1vw;
+  padding: 1vw;
   cursor: pointer;
 }
+
 .audioIcon:hover {
   background-color: #ffffff47;
   border-radius: 50%;
 }
+
 .videoBg {
   position: fixed;
   top: 0;
@@ -84,28 +53,40 @@
 
 .mainHeading {
   color: white;
-  font-size: 45px;
+  font-size: 2.5vw;
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0px;
-  margin-block: 30px;
+  margin-block: 2.3vw;
+  font-family: "Anta" !important;
 }
+
 .starWars {
-  width: 160px;
-  height: 80px;
+  width: 17vw;
+  height: 9vw;
   border-radius: 8px;
+  margin-block: 2vw;
+}
+@media screen and (max-width: 767px) {
+  .mainHeading {
+    font-size: 3vw;
+  }
+  .allPlanetsContainer {
+    height: max-content;
+  }
 }
 .loader {
-  margin-top: 29vh;
   background-color: #ffffff;
   padding: 20px;
 }
+
 .loaderText {
   color: white;
   font-weight: 550;
 }
+
 .allPlanetsContainer {
   width: 90vw;
   display: flex;
@@ -113,36 +94,76 @@
   justify-content: center;
   padding-top: 25px;
 }
+
 .eachPlanetCard {
-  width: 13vw;
-  height: 13vw;
+  width: 12.5vw;
+  height: 12.5vw;
   text-align: center;
   background-color: #000000de;
   color: white;
-  margin: 30px;
-  transition: transform 0.3s;
+  margin: 3vw;
+  transition: transform 0.2s;
   cursor: pointer;
-  border-radius: 20%;
-  padding: 15px;
+  border-radius: 40% 5% 40% 5%;
+  padding: 1.5vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 0px 13px #ffffffb2;
+  box-shadow: 0px 0px 2vw #ffa600c1;
+  border: 1.5px solid orange;
 }
+@media screen and (max-width: 767px) {
+  .eachPlanetCard {
+    width: 20vw;
+    height: 20vw;
+  }
+}
+
 .eachPlanetCard:hover {
-  transform: scale(1.12);
+  transform: rotate(90deg);
   background-color: #ffffffe7;
+  border: 1.5px solid transparent;
+  box-shadow: 0px 0px 20px #ffffff;
   color: black;
 }
+
+.eachPlanetCard:hover .planetSpan {
+  transform: rotate(-90deg);
+}
+
+.planetSpan {
+  font-size: 1.5vw;
+}
+
 .planetName {
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 2.3vw;
   margin-block: 0px;
 }
+
 .pagination {
-  padding: 20px;
+  padding: 2vw;
   text-align: center;
-  border-radius: 5px;
-  margin-block: 25px;
+  margin-block: 3vw;
+}
+.MuiPaginationItem-page {
+  color: white !important;
+  font-size: 1.2vw !important;
+  margin-inline: 0.5vw !important;
+}
+.MuiPaginationItem-page:hover {
+  background-color: #ffffff !important;
+  color: black !important;
+}
+@media screen and (max-width: 600px) {
+  .pagination {
+    padding: 1vw;
+    margin-block: 5vw;
+    margin-bottom: 10vw;
+  }
+
+  .MuiPaginationItem-page {
+    font-size: 2.2vw;
+  }
 }
